<package>
  <name>rviz_plugin_humans</name>
  <version>0.1.0</version>
  <description>
     Plugin to visualize concert_msgs::Humans in RVIZ
  </description>
  <maintainer email="TODO@TODO.com">TODO</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rviz_plugin_tutorials</url>
  <author>TODO</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>concert_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
